# KROMI_BIKECONTROL

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  NEXT_SESSION_FEATURES.md  NEXT_SESSION_PROMPT.md  README.md  SESSION_18_SETUP.md  capacitor.config.ts  eslint.config.js  index.html  middleware.js  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
.claude/: hooks.md  settings.json
.claude/agents/: analyst.md  researcher.md
.claude/commands/: README.md  ble.md  db.md  deploy.md  (+3 more)
.netlify/: netlify.toml  state.json
android/: capacitor.settings.gradle
api/: og.js  ride-hero.js  ride-og.js
ble-bridge-android/: build.gradle  settings.gradle
docs/: APK_DEEP_ANALYSIS.md  BOSCH_EBIKE_PROTOCOL.md  GARMIN_VARIA_PROTOCOL.md  GIANT_BLE_PROTOCOL.md  GIANT_GEV_PROTOCOL_COMPLETE.md  IGPSPORT_LIGHT_RADAR_PROTOCOL.md  KROMI-DRIVE-STORAGE.md  KROMI-IMPERSONATION.md  KROMI-INTELLIGENCE-V2.md  KROMI-RBAC-ADMIN.md  KROMI_INTELLIGENCE.md  NRF_CAPTURE_ANALYSIS.md  OBSIDIAN_NOTE.md  RUNBOOK.md  SHIMANO_STEPS_PROTOCOL.md  SPECIALIZED_PROTOCOLS.md
public/: club.html  emergency.html  live.html  paste-log.html  ride-engine.js  ride-styles.css  ride.html
src/: App.tsx  index.css  main.tsx
tests/: rls-smoke.mjs  shop-e2e.mjs
tools/: db-drift.mjs
tools/kromi-doc/: README.md  pyproject.toml
tools/kromi-doc/kromi_doc/: __init__.py  __main__.py  cli.py  deps.py  embeddings.py  hooks.py  new_note.py  obsidian.py  server.py  sync.py  validate.py
tools/kromi-doc/templates/: decision.md  feature.md  module.md  service.md  use_case.md
(+364 files in other folders)
